--- a/client/main.css
+++ b/client/main.css
@@ -3,233 +3,20 @@ body {
   font-size: 16px;
 }
 
-.error-message{
-  width: 100%;
-}
-
-.noSitesError{
-   display: flex;
-   justify-content: center;
-   margin: 30px;
-}
-
-.search-bar{
-  padding: 5%;
-  padding-bottom: 0%;
+.dashboard-container{
   display: flex;
   justify-content: center;
-}
-.cards{
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  padding: 5%;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-gap: 20px;
-  align-items: stretch;
-}
-.card {
-  width: 250px;
-  height: 250px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  text-align: center;
-  margin: 10px;
+  text-align: center
 }
 
-.card-text {
-  padding: 10px;
+.tableauPlaceholder{
+  position: relative
 }
 
-.card-img {
-  width: 100%;
-  max-width: 100%; 
-  max-height: 65%; 
+.img-viz{
+  border: none
 }
 
-.card-starts {
-  display: flex;
-  justify-content: center;
-}
-
-input[type="text"]{font: 15px/24px 'Muli', sans-serif; color: #333; width: 50%; box-sizing: border-box; letter-spacing: 1px;}
-
-.card-detail{  
-  margin-left: 10%;
-  height: 75%;
-  width: 80%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  background: white;
-  position: absolute;
-  top: 150px;
-}
-
-.card-detail-img{
-  background: url(https://cdn-image.foodandwine.com/sites/default/files/1501607996/opentable-scenic-restaurants-marine-room-FT-BLOG0818.jpg);
-  max-height: 500px;
-  min-height: 500px;
-  min-width: 100%;
-  background-repeat: round;
-}
-
-.card-detail-img::after, .card-detail-img::before{
-  background-image: url(https://cdn-image.foodandwine.com/sites/default/files/1501607996/opentable-scenic-restaurants-marine-room-FT-BLOG0818.jpg);
-  max-height: 500px;
-  min-height: 500px;
-  min-width: 100%;
-  background-repeat: round;
-}
-
-.card-detail-header{
-  width: 100%;
-  margin-top: 30px;
-  text-align: center;
-}
-
-.card-detail-header>h3{
-  color:gray;
-}
-
-.other-sites{
-  margin: 20px;
-  font-weight: bold;
-}
-
-.other-sites:hover{
-  color: orange;
-  cursor: pointer;
-}
-
-.error{
-  color:gray;
-  text-align: center;
-  width: 400%;
-}
-
-.error2{
-  color:gray;
-  text-align: center;
-}
-
-.comment-number{
-  display: flex;
-  justify-content: center;
-}
-
-.comment{
-  margin-top:30px;
-  margin-left: 10%;
-  padding: 20px;
-  width: 80%;
-  background-color: rgba(128, 128, 128, 0.171);
-  border-radius: 10px;
-}
-
-.card-detail-comments{
-  margin: 2%;
-  overflow-y: auto;
-  max-height: 50%;
-}
-
-.add-comment{
-  margin-left: 30%;
-  width: 40%;
-  background-color: orange;
-  color:white;
-  font-weight: bold;
-  padding: 10px;
-  text-align: center;
-}
-
-.add-comment:hover{
-  cursor: pointer;
-  background-color: gray;
-}
-
-.modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width:100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.6);
-}
-
-.modal-main {
-  position:fixed;
-  padding: 10px;
-  background: white;
-  width: 30%;
-  height: auto;
-  top:50%;
-  left:50%;
-  transform: translate(-50%,-50%);
-  z-index: 1;
-}
-
-.display-block {
-  display: block;
-  z-index: 10;
-}
-
-.display-none {
-  display: none;
-}
-
-textarea{
-  overflow: auto;
-  width: 100%;
-  height: 150px;
-  border-color: orange;
-  margin-bottom: 10px;
-}
-
-button{
-  margin:5px;
-  padding: 5px;
-  margin: 5px;
-  float: right;
-}
-span[class^= "react-stars-"]{
-  z-index: 0;
-}
-
-.edit{
-  margin-left: 5%;
-}
-.delete{
-  margin-left: 20%;
-  width: 20%;
-  background-color: gray;
-  color:white;
-  font-weight: bold;
-  padding: 10px;
-  text-align: center;
-}
-
-.delete:hover{
-  cursor: pointer;
-  background-color: red;
-}
-
-.admin-buttons{
-  display: flex !important;
-}
-
-.padding-text{
-  padding: 10px;
-}
-
-.edit-element{
-  width: 100%;
-  margin-bottom: 10px;
-}
-
-.edit-element-text{
-  width: 40%;
-  margin: 5px;
-}
-
-.edit-element>input{
-  width: 100%;
+.tableauViz{
+  display:none;
 }
